--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -53,6 +53,8 @@ tmpdir          = /tmp
 skip-external-locking
 #skip-networking
 skip-name-resolve
+#language        = /usr/share/mysql/english
+character-set-server = utf8
 #
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
