modified:   templates/default/my.cnf.erb

--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -63,7 +63,7 @@ bind-address            = <%= node['mysql']['bind_address'] %>
 # * Fine Tuning
 #
 key_buffer              = <%= node['mysql']['tunable']['key_buffer'] %>
-max_allowed_packet      = <%= node['mysql']['tunable']['max_allowed_packet'] %>
+#max_allowed_packet      = <%= node['mysql']['tunable']['max_allowed_packet'] %>
 thread_stack            = <%= node['mysql']['tunable']['thread_stack'] %>
 thread_cache_size       = <%= node['mysql']['tunable']['thread_cache_size'] %>
 
